[package]
name = "libctf"
description = "SDK intended for use with CTF-rs, but is designed to be repurposed by others to easily extend functionality for other CTF related projects"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/libctf/sdk"
keywords = ["sdk", "ctf"]
categories = ["api-bindings", "config", "web-programming"]

[lib]
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

# [features]

# [lints]

# [profile]

# [workspace]

[dependencies]
context = "3.0.0"
either = "1.15.0"
futures = "0.3.31"
http = "1.3.1"
hyper-util = "0.1.12"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.0.0", features = ["client", "derive"] }
kube-derive = "1.0.0"
log = "0.4.27"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
tower = "0.5.2"
tracing = "0.1.41"

# [badges]
# # The `maintenance` table indicates the status of the maintenance of
# # the crate. This may be used by a registry, but is currently not
# # used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# # and https://github.com/rust-lang/crates.io/issues/2438 for more details.
# #
# # The `status` field is required. Available options are:
# # - `actively-developed`: New features are being added and bugs are being fixed.
# # - `passively-maintained`: There are no plans for new features, but the maintainer intends to
# #   respond to issues that get filed.
# # - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
# #   it or providing support, but it works for the purposes it was designed for.
# # - `experimental`: The author wants to share it with the community but is not intending to meet
# #   anyone's particular use case.
# # - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
# #   else.
# # - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
# #   can describe why, there could be a better solution available or there could be problems with
# #   the crate that the author does not want to fix).
# # - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
# #   their intentions, potential crate users will need to investigate on their own.
# maintenance = { status = "..." }
